--- a/.github/workflows/test_this_action.yml
+++ b/.github/workflows/test_this_action.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build
-        uses: pn11/docker-ubuntu-texlive-ja@main
+        uses: pn11/docker-ubuntu-texlive-ja@master
         with:
           input_name: sample/sample
