--- a/.github/workflows/test_this_action.yml
+++ b/.github/workflows/test_this_action.yml
@@ -8,3 +8,4 @@ jobs:
         uses: pn11/docker-ubuntu-texlive-ja@master
         with:
           input_name: sample/sample
+          work_dir: sample
